<resources>
    <string name="app_name">Motivation</string>
    <string name="hello_user">Olá</string>
    <string name="phrases">Riscos devem ser corridos, porque o maior perigo é não arriscar nada!</string>
    <string name="new_phrase">nova frase</string>
    <string name="welcome">Vamos começar?</string>
    <string name="name">Qual seu nome?</string>
    <string name="save">Salvar</string>
    <string name="validation_name">Informe seu nome!</string>
</resources>