<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/purpple"
    tools:context=".ui.UserActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="36sp"
            android:fontFamily="@font/cabin"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"/>


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_Save"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="14dp"
        android:backgroundTint="@color/pink"
        android:fontFamily="@font/cabin"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/white" />






</RelativeLayout>